css/legal-documentation.css
main {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    flex: 1;
    margin-left: 232px;
    margin-top: 100px;
    padding: 72px 88px;
}

body {
    height: auto;
}

header {
    position: fixed;
}

h1 {
    font-size: 61px;
    font-weight: 700;
    margin-bottom: 48px;
}

h2 {
    font-size: 33px;
    font-weight: 700;
    color: #4589FF;
    margin-bottom: 10px;
}

li {
    list-style-position: inside;
}

.legal-documentation {
    display: flex;
    flex-direction: column;
    gap: 35px;
    overflow-wrap: break-word;
    word-break: break-word;
}

.index-link {
    color: #42526E;
    font-size: 18px;
    font-weight: 700;
    text-decoration: none;
}

.index-link:hover {
    text-decoration: underline;
    color: #005DFF;
}

@media (max-width: 800px) {
    main {
        margin-left: 0;
        margin-bottom: 80px;
    }
}

@media (max-width: 1110px) {
    h1 {
        font-size: 47px;
    }

    h2 {
        font-size: 23px;
    }
    main {
        padding: 64px 16px;
    }
}

